# ndtp_ids

./: .gitignore  DATABASE_INITIALIZATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_RU.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  QUICK_START_RU.md  README.md  SECURITY_SUMMARY.md  SUMMARY_RU.md  TRAINING_QUICKSTART.md  WEB_INTERFACE_GUIDE.md  ml_model.pkl  pyproject.toml  requirements.txt  run_analysis.py  setup.py  start_ids.sh  status_ids.sh  stop_ids.sh  Проекты ндтп - Практико-ориентированные проекты ИБ.txt
examples/: capture_example.py  demo.py  integrated_demo.py
myenv/: pyvenv.cfg
scripts/: README.md  __init__.py  attack_generator.py  attack_simulator.py  check_progress.py  check_results.py  ddos_test.py  generate_normal_traffic.py  reset_db.py  run_all.py  train_model.py  verify_model.py
src/ndtp_ids/: __init__.py  adaptive_trainer.py  aggregator.py  anomaly_detector.py  create_correct_db.py  fix.py  hybrid_scorer.py  init_db.py  ml_detector.py  packet_collector.py  suricata_engine.py  suricata_rules.py  web_interface.py
src/ndtp_ids/templates/: alerts.html  dashboard.html  hosts.html  hybrid.html  monitoring.html  rules.html  training.html
tests/: __init__.py  test_basic.py  test_db_init.py  test_packet_collector.py
